# asd

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
eagle/: switch.brd  switch.sch
man/: Makefile.am  Makefile.in  asd.1
scripts/: Makefile.am  Makefile.in  asd
src/: Makefile.am  Makefile.in  arguments.c  arguments.h  cleanup.c  cleanup.h  daemonize.c  daemonize.h  gpio.c  gpio.h  help.c  help.h  loging.c  loging.h  main.c  options.h  sighandler.c  sighandler.h  status.c  status.h  switch.c  switch.h  version.h
